--- a/meinengel.html
+++ b/meinengel.html
@@ -48,13 +48,18 @@
     <script>
         const textArray = [
             "Hey mein Schatz,",
-            "Sechs Monate. Ein halbes Jahr. Ich kann es kaum glauben, wie schnell die Zeit vergangen ist, aber gleichzeitig fühlt es sich so an, als wärst du schon immer ein Teil meines Lebens gewesen. Seitdem du da bist, hat sich so viel verändert irgendwie fühlt sich alles heller, wärmer und einfach richtiger an. Du bist nicht nur meine Freundin, du bist mein Zuhause, meine beste Freundin, mein Ruhepol und mein größtes Abenteuer zugleich.",
-            "Ich liebe es, wie wir zusammen lachen, wie du mich ansiehst, wenn ich mal wieder Blödsinn rede, oder wie du mich mit nur einem Satz komplett durchschauen kannst. Du kennst mich besser als jeder andere und trotzdem (oder gerade deshalb) entscheidest du dich jeden Tag wieder für mich. Das bedeutet mir mehr, als ich je in Worte fassen könnte.",
-            "Ich denke so oft darüber nach, was wir schon alles erlebt haben. Diese ganzen kleinen Momente, die für andere vielleicht unwichtig wären, aber für mich die schönsten Erinnerungen sind. Die Nächte, in denen wir stundenlang geredet haben, die Tage, an denen einfach nur deine Nähe gereicht hat, um mich glücklich zu machen. Jede Umarmung, jeder Kuss, jedes Lächeln all das ist mir so viel wert.",
-            "Du machst mich besser. Du gibst mir Halt, wenn ich ihn brauche, und forderst mich heraus, wenn ich feststecke. Und egal, was gerade ist mit dir fühlt sich alles machbar an. Du bist mein sicherer Hafen und gleichzeitig der schönste Sturm, den ich je erlebt habe.",
+            "Sechs Monate. Ein halbes Jahr. Ich kann es kaum glauben, wie schnell die Zeit vergangen ist, aber gleichzeitig fühlt es sich so an, als wärst du schon immer ein Teil meines Lebens gewesen.",
+            "Seitdem du da bist, hat sich so viel verändert irgendwie fühlt sich alles heller, wärmer und einfach richtiger an.",
+            "Du bist nicht nur meine Freundin, du bist mein Zuhause, meine beste Freundin, mein Ruhepol und mein größtes Abenteuer zugleich.",
+            "Ich liebe es, wie wir zusammen lachen, wie du mich ansiehst, wenn ich mal wieder Blödsinn rede, oder wie du mich mit nur einem Satz komplett durchschauen kannst.",
+            "Du kennst mich besser als jeder andere und trotzdem (oder gerade deshalb) entscheidest du dich jeden Tag wieder für mich. Das bedeutet mir mehr, als ich je in Worte fassen könnte.",
+            "Ich denke so oft darüber nach, was wir schon alles erlebt haben. Diese ganzen kleinen Momente, die für andere vielleicht unwichtig wären, aber für mich die schönsten Erinnerungen sind.",
+            "Die Nächte, in denen wir stundenlang geredet haben, die Tage, an denen einfach nur deine Nähe gereicht hat, um mich glücklich zu machen. Jede Umarmung, jeder Kuss, jedes Lächeln all das ist mir so viel wert.",
+            "Du machst mich besser. Du gibst mir Halt, wenn ich ihn brauche, und forderst mich heraus, wenn ich feststecke.",
+            "Mit dir fühlt sich alles machbar an. Du bist mein sicherer Hafen und gleichzeitig der schönste Sturm, den ich je erlebt habe.",
             "Ich freue mich so sehr auf das, was noch vor uns liegt. Auf all die Erlebnisse, die wir noch teilen werden, auf die Tage, an denen wir gemeinsam lachen, und auf die Nächte, in denen wir einfach nebeneinander liegen und wissen, dass wir genau da sind, wo wir hingehören.",
             "Danke, dass du mich so liebst, wie ich bin. Danke, dass du in meinem Leben bist. Danke für sechs unvergessliche Monate. Ich liebe dich, mehr als Worte es je sagen könnten.",
-            "Dein Yannik"
+            "Dein Yannik :3"
         ];
         
         let index = 0;
