--- a/konstruktivismus-feedback.html
+++ b/konstruktivismus-feedback.html
@@ -284,7 +284,7 @@
 
     <div id="status" class="status"></div>
     <div class="small-note">
-      Dein Feedback ist anonym und unterstützt uns dabei, den Vortrag weiterzuentwickeln.
+      Dein anonymes Feedback hilft uns, zukünftige Vorträge noch besser zu gestalten.
     </div>
   </div>
 
