Refine example phrases in feedback form

--- a/konstruktivismus-feedback.html
+++ b/konstruktivismus-feedback.html
@@ -217,8 +217,8 @@
           <div class="window-title">Was habe ich wahrgenommen?</div>
           <div class="window-hint">
             Hier beschreibst du nur Beobachtungen ohne Bewertung  
-            zum Beispiel  
-            ich habe wahrgenommen, dass viele Beispiele genutzt wurden.
+            zum Beispiel:  
+            "Ich habe wahrgenommen, dass viele Beispiele genutzt wurden.".
           </div>
           <textarea
             id="fenster1"
@@ -237,9 +237,9 @@
           <div class="window-title">Wie deute ich den Vortrag?</div>
           <div class="window-hint">
             Hier kommt deine persönliche Interpretation  
-            zum Beispiel  
-            für mich wirkte das sehr strukturiert oder  
-            ich habe daraus geschlossen, dass ihr sicher im Thema seid.
+            zum Beispiel: 
+            "Für mich wirkte das sehr strukturiert.", oder  
+            "Ich habe daraus geschlossen, dass ihr euch wirklich null mit dem Thema auseinandergesetzt habt.".
           </div>
           <textarea
             id="fenster2"
@@ -261,10 +261,10 @@
           <div class="window-title">Wie wirkte der Vortrag auf mich?</div>
           <div class="window-hint">
             Hier geht es um deine Gefühle und Wirkungen des Vortrags  
-            zum Beispiel  
-            das hat mich beruhigt,  
-            ich wurde neugierig,  
-            an einer Stelle war ich verwirrt.
+            zum Beispiel: 
+            "Es hat mich beruhigt..",  
+            "Ich wurde neugierig..",  
+            "An einer Stelle war ich verwirrt..".
           </div>
           <textarea
             id="fenster3"
