Update redirect URL in nachkriegszeit.html

--- a/nachkriegszeit.html
+++ b/nachkriegszeit.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="refresh" content="0; url=https://example.com">
+  <meta http-equiv="refresh" content="0; url=https://strich.org/nachkriegszeit.pdf>
 </head>
 <body>
   <p>If you are not redirected automatically, <a href="https://strich.org/nachkriegszeit.pdf">click here</a>.</p>
